# mcar

./: .gitignore  README.md
src/diagnostic/ipc_diagnostic/: CMakeLists.txt  package.xml
src/diagnostic/ipc_diagnostic/include/: ipc_diagnostic_pub.h
src/diagnostic/ipc_diagnostic/lib/: ipc_diagnostic_pub.cpp
src/diagnostic/ipc_diagnostic/src/: ipc_diagnostic_main.cpp
src/diagnostic/lidar_diagnostic/: CMakeLists.txt  package.xml
src/diagnostic/lidar_diagnostic/include/: lidar_diagnostic_pub.h
src/diagnostic/lidar_diagnostic/lib/: lidar_diagnostic_pub.cpp
src/diagnostic/lidar_diagnostic/src/: lidar_diagnostic_main.cpp
src/localization/gps-world-tf/: CMakeLists.txt  CMakeLists_old.txt  package.xml
src/localization/gps-world-tf/include/: UTM.cpp  UTM.h
src/localization/gps-world-tf/map_data/: B2_SURFACELINEMARK.dbf  B2_SURFACELINEMARK.qix  B2_SURFACELINEMARK.shp  B2_SURFACELINEMARK.shx  b2_surfacelinemark_transform.shp  gdal_test.py  visualize.rviz
src/localization/gps-world-tf/map_data/kiapi_5179/: A1_NODE.dbf  A1_NODE.shp  A1_NODE.shx  (+19 more)
src/localization/gps-world-tf/scripts/: lanelet_marker.py
src/localization/gps-world-tf/src/: gps_world_tf_node.cpp  gps_world_tf_node_backup.cpp  gps_world_tf_node_send_host_gps.cpp  sat_to_rviz.cpp
src/localization/gps_system_localizer/: CMakeLists.txt  package.xml  readme.md
src/localization/gps_system_localizer/launch/: debug_kiapi_localization_issues.launch  lab_debug.launch  lab_debug_december.launch
src/localization/gps_system_localizer/src/: A2_LINK_epsg5179.shp  A2_LINK_epsg5179.shx  B2_SURFACELINEMARK_epsg5179.shpo  B3_SURFACEMARK_epsg5179.shpo  C3_VEHICLEPROTECTIONSAFETY_epsg5179.shpo  control_team_msg_pub.py  gps2tf.py  gps_to_tf.cpp  helper.py  katech_prenet_testfile.py  katech_test_prenet.py  lanelet_marker.py  local_test_node.py  rviz_VILS.py  see_waypoints.py  setup.py  to_control_team.py  to_control_team_demo.py  to_control_team_demo_backup.py  utils.py  utils_cython.c  utils_cython.pyx  waypoint_marker.py
src/msgs/j3224_msgs/: CMakeLists.txt  package.xml
src/msgs/j3224_msgs/msg/: DDateTime.msg  DetectedObjectData.msg  FullPositionVector.msg  ObjectCommonData.msg  PositionalAccuracy.msg  sdsm.msg
src/msgs/katech_custom_msgs/: CMakeLists.txt  package.xml
src/msgs/katech_custom_msgs/msg/: ped_crosswalk_check_array_msg.msg  ped_crosswalk_check_msg.msg
src/msgs/katech_diagnostic_msgs/: CMakeLists.txt  package.xml
src/msgs/katech_diagnostic_msgs/msg/: cam_diagnostic_msg.msg  cpt7_gps_diagnostic_msg.msg  hmi_diagnostic_msg.msg  ipc_diagnostic_msg.msg  k_adcu_diagnostic_msg.msg  katech_diagnostic_msg.msg  lidar_diagnostic_msg.msg  radar_diagnostic_msg.msg  v2x_diagnostic_msg.msg  vcu_diagnostic_msg.msg
src/msgs/mmc_msgs/: CMakeLists.txt  package.xml
src/msgs/mmc_msgs/msg/: V2V.msg  association_msg.msg  bus_local_msg.msg  chassis_msg.msg  control_team_veh_array_msg.msg  control_team_veh_sd_msg.msg  control_team_veh_xy_msg.msg  ego_vel_acc.msg  from_control_team.msg  intersection_msg.msg  ioniq_motion_lane.msg  ioniq_motion_lane_array.msg  lane_array_msg.msg  lane_msg.msg  lane_occupancy.msg  localization2D_msg.msg  localization2D_msg_bus.msg  localization2D_sd_msg.msg  matrix_msg.msg  motor_rpm_msg.msg  ntrip_status.msg  object_array_msg.msg  object_msg.msg  path_history.msg  to_control_team_from_local_msg.msg  to_control_team_from_local_msg_o.msg  vehicle_cmd_msg.msg
src/msgs/perception_ros_msg/: CMakeLists.txt  package.xml
src/msgs/perception_ros_msg/msg/: AxisStatusPose.msg  CoreInfo.msg  EndPoints.msg  FreeSpaceInfos.msg  Lane.msg  LidarFrameMsg.msg  Object.msg  Objects.msg  Point2f.msg  Pose.msg  PoseMap.msg  RoadEdge.msg  RoadEdges.msg  RsPerceptionMsg.msg  SupplementInfo.msg  object_array_msg.msg  object_array_msg2.msg  object_msg2.msg
src/msgs/v2x_msgs/: CMakeLists.txt  package.xml
src/msgs/v2x_msgs/msg/: intersection_array_msg.msg  intersection_msg.msg  movement_msg.msg
src/sensing/can/: CMakeLists.txt  package.xml
src/sensing/can/dbc/: 180518_Camera_P_CAN_R01.dbc  180518_HAD_v5.dbc  180518_Radar_P_CAN_R01.dbc  2gen-2ch-C_IoniqEV.dbc  CANdb_IONIQev_PCAN1.dbc  CANdb_IONIQev_PCAN1_20250226_old.dbc  CANdb_IONIQev_PCAN1_20250227.dbc  CANdb_IONIQev_PCAN1_20250318.dbc  CANdb_IONIQev_PCAN1_20250407.dbc  CANdb_IONIQev_PCAN1_20250916.dbc  CANdb_IONIQev_PCAN1_20251001.dbc  CANdb_IONIQev_PCAN1_old.dbc  CANdb_IONIQev_PCAN1_oldv2.dbc  CANdb_IONIQev_PCAN1_origin.dbc  CANdb_IONIQev_PCAN2.dbc  CANdb_IONIQev_PCAN2_20250415.dbc  ESR DV3_64Tgt-AS.dbc  ESR_short.dbc  HMC_1p7_2_TUCSON.dbc  Ibeo_Object_and_Vehicle_data_x400_v2.dbc  Lane_info_restored.dbc  VUT_DBC.dbc  check_dbc.py  from_control_team_planned_path.dbc  sensor_fusion_result_revised.dbc  sensor_fusion_result_rim.dbc
src/sensing/can/include/: can_pub.h
src/sensing/can/lib/: can_pub_func.cpp
src/sensing/can/src/: CAN_channel_initializer.cpp  HMI_CAN_writer.cpp  IONIQ_CAN_reader.cpp  Tucson_CAN_reader.cpp  V2V_CAN_writer_to_ctrl.cpp  chassis_CAN_reader.cpp  cpt7_CAN_writer.cpp  cpt7_topic_matcher.cpp  diagnostic_CAN_writer.cpp  from_control_team_CAN_reader.cpp  front_LIDAR_CAN_reader.cpp  front_RADAR_CAN_reader.cpp  gps_diagnostic_CAN_writer.cpp  katech_ped_detector.py  katech_ped_detector_can_writer.cpp  local_CAN_writer.cpp  percept_topic_matcher.cpp  percept_topic_only_front_lidar.cpp  planned_path_CAN_reader.cpp  py_can_sender.py  py_chassis_can_publisher.py  py_control_team_planned_path_receiver.py  py_corner_radar_left_can_publisher.py  py_corner_radar_right_can_publisher.py  py_front_lidar_can_publisher.py  py_front_radar_can_publisher.py  py_vision_can_publisher.py  rslidar_CAN_writer.cpp  spat_CAN_writer.cpp  track_CAN_writer.cpp  track_CAN_writer_no_grid.cpp  vision_CAN_reader.cpp
src/v2x/j3224_decode/: CMakeLists.txt  README.md  package.xml
src/v2x/j3224_decode/include/: asn1ber_common.h  asn1defs.h  asn1defs_int.h  ffasn1-j2735-2020.h
src/v2x/j3224_decode/src/: j2735_decode.cpp
src/visualization/control_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/visualization/control_panel/src/: mode_panel.cpp
(+893 files in other folders)
