<?xml version="1.0"?>
<package format="2">
  <name>control_panel</name>
  <version>0.0.1</version>
  <description>Driving mode control panel for RViz</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mmc_msgs</depend>
  <depend>rviz</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>